--- a/AfterSale/src/main/resources/application-test.yaml
+++ b/AfterSale/src/main/resources/application-test.yaml
@@ -4,11 +4,11 @@ spring:
     #JDBC驱动的名称
     driver-class-name: com.mysql.jdbc.Driver
     #数据库的JDBC url
-    url: jdbc:mysql://47.52.88.176:3306/DB1_1?characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/local_oomall?serverTimezone=GMT%2B8
     #数据库用户名
-    data-username: user1_1
+    data-username: root
     #数据库密码
-    password: ooad1
+    password: xiiicuaxz
     #建表的SQL
     schema: classpath:sql/test/schema.sql
     #当数据库为内嵌数据库时，如h2，则执行初始化SQL
